--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "battlefy-py"
+name = "battlefy.py"
 version = "0.1.0"
 description = "A Python Library for Battlefy.com"
 authors = ["Vincent Lee <vlee@vlee.me.uk>"]
