--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -31,4 +31,5 @@ jobs:
         id: mint
         uses: tschm/token-mint-action@v1.0.2
       - name: Publish to PyPI
-        run: poetry publish --build -u __token__ -p ${{ steps.mint.outputs.token }}
+        run: |
+          poetry publish --build -u __token__ -p '${{ steps.mint.outputs.api-token }}'
